--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "dependencies": {
     "axios": "0.21.1",
     "faker": "5.4.0",
+    "history":"5.0.0",
     "miragejs": "0.1.41",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
