--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "17.0.0",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "typescript": "3.8.3"
