--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
     "axios": "0.21.1",
-    "faker": "5.4.0",
     "history": "5.0.0",
-    "miragejs": "0.1.41",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-loader-spinner": "^4.0.0",
@@ -22,8 +22,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": [
     ">0.2%",
