--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
-    "axios": "0.21.1",
+    "axios": "^0.21.4",
     "history": "5.0.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
-    "react-loader-spinner": "^4.0.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "6.0.0-beta.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^5.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
