--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-loader-spinner": "^5.3.4",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
