--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "5.0.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.3.4",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "6.0.0-beta.0",
