--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-icons": "^4.11.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-loader-spinner": "^5.3.4",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "6.0.0-beta.0",
